--- a/SquaresNStuff/Base.lproj/Main.storyboard
+++ b/SquaresNStuff/Base.lproj/Main.storyboard
@@ -1,8 +1,14 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,12 +23,49 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SpaceShip" translatesAutoresizingMaskIntoConstraints="NO" id="r8d-cd-9ad">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="167"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AlbertEinstein" translatesAutoresizingMaskIntoConstraints="NO" id="BvK-Og-2F4">
+                                <rect key="frame" x="129" y="125.5" width="117" height="117"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="BvK-Og-2F4" secondAttribute="height" multiplier="1:1" id="LBv-Ff-GIZ"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Albert Einstein" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aIJ-7Y-95E">
+                                <rect key="frame" x="100" y="250.5" width="176" height="37"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <size key="shadowOffset" width="2" height="1"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="r8d-cd-9ad" secondAttribute="trailing" id="4Ed-Uw-lEM"/>
+                            <constraint firstItem="BvK-Og-2F4" firstAttribute="height" secondItem="r8d-cd-9ad" secondAttribute="height" multiplier="0.7" id="Chw-rB-32T"/>
+                            <constraint firstItem="r8d-cd-9ad" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Jwb-EJ-MjJ"/>
+                            <constraint firstItem="aIJ-7Y-95E" firstAttribute="centerX" secondItem="BvK-Og-2F4" secondAttribute="centerX" id="Rp1-4f-b0C"/>
+                            <constraint firstItem="BvK-Og-2F4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="V3G-Al-ce6"/>
+                            <constraint firstItem="aIJ-7Y-95E" firstAttribute="top" secondItem="BvK-Og-2F4" secondAttribute="bottom" constant="8" id="XQc-kl-RfH"/>
+                            <constraint firstItem="r8d-cd-9ad" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="Z59-uX-W3c"/>
+                            <constraint firstItem="r8d-cd-9ad" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.25" id="daX-qn-0HP"/>
+                            <constraint firstItem="BvK-Og-2F4" firstAttribute="top" secondItem="r8d-cd-9ad" secondAttribute="bottom" multiplier="0.75" id="kQp-4c-Lu7"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="profileImageView" destination="BvK-Og-2F4" id="SRj-q7-BPU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="399.19999999999999" y="388.15592203898052"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="AlbertEinstein" width="300" height="320"/>
+        <image name="SpaceShip" width="900" height="563"/>
+    </resources>
 </document>
